--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,5 +1,5 @@
-# FROM jenkins:2.60.3
-FROM jenkins:latest
+FROM jenkins:2.60.3
+# FROM jenkins:latest
 
 USER root
 RUN apt-get update
@@ -7,7 +7,6 @@ RUN apt-get install curl
 RUN curl -sL https://deb.nodesource.com/setup_9.x | bash
 RUN apt-get install nodejs
 RUN apt-get install -y vim
-# RUN apt-get install istanbul
 # RUN npm install -g yarn
 
 USER jenkins
